move build log to separate file and reset version
Move build log to separate file ".majak_log" so ninja and majak can
coexist a bit more peacefully.  Write a version entry with flatbuffers
instead of magic line.  Reset the version numbers since nothing knows
about the new filename yet.  Also, write entries with builders instead
of the object API to avoid some copying.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,6 +339,7 @@ add_custom_command(
         --cpp
         -o ${CMAKE_CURRENT_BINARY_DIR}
         --gen-object-api
+        --scoped-enums
         ${CMAKE_CURRENT_SOURCE_DIR}/src/log.fbs
     COMMENT "[flatc] src/log.fbs"
 )
