--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,11 @@ message(STATUS "NINJA_FILESYSTEM_LIBRARY: ${NINJA_FILESYSTEM_LIBRARY}")
 
 if (NINJA_RE2C_EXECUTABLE)
     message(STATUS "RE2C: ${NINJA_RE2C_EXECUTABLE}")
-    add_executable(RE2C::RE2C IMPORTED)
-    set_property(TARGET RE2C::RE2C PROPERTY IMPORTED_LOCATION "${RE2C_EXECUTABLE}")
-    set(NINJA_SYSTEM_RE2C TRUE)
+    add_executable(re2c IMPORTED)
 else()
-    message(STATUS "RE2C: <built from third party sources>")
+    message(STATUS "RE2C: <built from third_party/re2c sources>")
     add_subdirectory(third_party/re2c EXCLUDE_FROM_ALL)
+    set(NINJA_RE2C_EXECUTABLE re2c)
 endif()
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT MSVC)
